# project_mixar

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  main.cpp
graph/: GraphExecutor.cpp  GraphExecutor.hpp
nodes/: BaseImageNode.hpp  BlendNode.cpp  BlendNode.hpp  BlurNode.cpp  BlurNode.hpp  BrightnessContrastNode.cpp  BrightnessContrastNode.hpp  ColorSPlitNode.cpp  ColorSplitNode.hpp  ConvolutionNode.cpp  ConvolutionNode.hpp  EdgeDetectionNode.cpp  EdgeDetectionNode.hpp  ImageUtils.hpp  NodeFactory.cpp  NodeFactory.hpp  NodeUI.cpp  NodeUI.hpp  NoiseNode.cpp  NoiseNode.hpp  OutputNode.cpp  OutputNode.hpp  SlotUtils.hpp  ThresholdNode.cpp  ThresholdNode.hpp  imageInputNode.cpp  imageInputNode.hpp
smkflow/include/smkflow/: Graph.hpp  Theme.hpp
smkflow/src/smkflow/: Graph.cpp
